--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "description": "Web DB II Module Challenge",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "server": "nodemon index.js"
   },
   "author": "Lambda School",
   "devDependencies": {
     "nodemon": "^1.19.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "helmet": "^3.20.0",
+    "knex": "^0.19.1",
+    "morgan": "^1.9.1",
+    "sqlite3": "^4.0.9"
   }
 }
